<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradiant">


    <TextView
        android:id="@+id/heading1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:text="@string/musicwiki"
        android:textAlignment="center"
        android:textColor="#404040"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#404040"
        android:textSize="25sp" />

    <TextView
        android:layout_width="301dp"
        android:layout_height="52dp"
        android:layout_below="@id/heading3"
        android:padding="10dp"
        android:text="@string/click_for_more_options"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="15sp" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading3"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading3"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />
    <TextView
        android:id="@+id/heading3"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:text="@string/choose_from_top_10_genre_to_start_with"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tagName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="405dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:onClick="changeactivity"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:onClick="changeactivity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="275dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:onClick="changeactivity"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="15dp"
        android:onClick="changeactivity"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:onClick="changeactivity"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="405dp"
        android:layout_toEndOf="@+id/tagName1"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:onClick="changeactivity"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="340dp"
        android:layout_toEndOf="@+id/tagName3"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/Name"
        android:onClick="changeactivity"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="275dp"
        android:layout_toEndOf="@+id/tagName5"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:onClick="changeactivity"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="210dp"
        android:layout_toEndOf="@+id/tagName7"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/Name"
        android:onClick="changeactivity"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="145dp"
        android:layout_toEndOf="@+id/tagName9"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:onClick="changeactivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>